--- a/Module_1/css/main.css
+++ b/Module_1/css/main.css
@@ -216,6 +216,7 @@ h3:after {
 .services-list {
     display: flex;
     flex-wrap: wrap;
+    position: relative;
 }
 
 .services-block {
@@ -250,14 +251,16 @@ h3:after {
     transform: translateX(-55px) translateY(47px);
 }
 
-.services-block:nth-child(3)::after {
+.services-block:nth-child(2-n)::after {
     content: '';
+    display: block;
     width: 100%;
     height: 1px;
     background-color: #e5e5e5;
     position: absolute;
-    left: 0;
-    bottom: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+    /* bottom: 130px; */
 }
 
 .services-block:nth-child(4)::before {
@@ -391,15 +394,28 @@ h3:after {
     font-weight: 400;
 }
 
-.photo {
-    background: linear-gradient(to bottom, rgb(232,129,130) 0%,rgb(240,217,138) 100%);
+.photo-holder {
+    background: linear-gradient(to bottom, rgba(252,227,138,1) 0%,rgba(243,129,129,1) 100%);
 }
 
-.photo:hover .photo img {
+.photo-holder {
+    transition: transform 0.2s ease;
+}
+
+.photo-holder:hover {
+    transform: translateX(-10px) translateY(-10px);
+}
+
+.photo-holder img {
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0);
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+
+.photo-holder img:hover {
     opacity: .1;
+    box-shadow: 5px 5px 5px 5px rgb(0, 0, 0);
 }
 
 
-.photo img {
-    transition: opacity .1s ease;
-}
+
