--- a/Module_1/css/main.css
+++ b/Module_1/css/main.css
@@ -387,7 +387,7 @@ h3:after {
 
 .photo-item p i {
     color: #999999;
-    font-family: "Roboto - Light Italic", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
 
@@ -702,7 +702,6 @@ h3:after {
     display: block;
     position: absolute;
     top: 35px;
-    left: 6px;
 }
 
 .clients-text p:last-child {
@@ -809,6 +808,12 @@ h3:after {
     margin-right: 9px;
 }
 
+.blog-holder a > i {
+    font-size: 1.06rem;
+    color: #95e1d3;
+    margin-right: 9px;
+}
+
 /* footer */
 
 .footer {
@@ -816,21 +821,19 @@ h3:after {
 }
 
 .footer-container {
-    margin-top: 74px;
+    /* margin-top: 74px; */
     display: flex;
-}
-
-.footer-block {
-    margin-right: 49px;
-    width: calc(33.333% - 49px);
 }
 
 .about-mogo {
     position: relative;
+    flex-grow: 1;
+    margin-top: 55px;
+    margin-right: 31px;
 }
 
 .mogo-text {
-    margin-bottom: 49px;
+    margin-bottom: 39px;
 }
 
 .mogo-text h2 {
@@ -903,7 +906,7 @@ h3:after {
 }
 
 .mogo-btn {
-    padding: 11px 40px;
+    padding: 11px 31px;
     background-color: #95e1d3;
     border: none;
     position: absolute;
@@ -918,17 +921,26 @@ h3:after {
 
 
 .footer-blogs {
-    margin-top: 80px;
+    margin-top: 75px;
+    margin-right: 39px;
+    padding: 0 20px;
+    flex-shrink: 0;
+    width: 33.333%;
 }
 
 .footer-blogs > h5 {
-    margin-bottom: 40px;
+    margin-bottom: 32px;
+    
 }
 
 .post {
     display: flex;
     align-items: center;
     margin-bottom: 31px;
+}
+
+.post-text h5 {
+    font-size: 0.8rem;
 }
 
 .post img {
@@ -938,17 +950,29 @@ h3:after {
 
 
 .footer-instagram {
-    margin-top: 80px;
+    margin-top: 75px;
+}
+
+.footer-instagram i {
+    font-family: "Roboto", sans-serif;
+    font-size: 0,866rem;
+    font-style: italic;
+    /* font-weight: 300i; */
 }
 
 .footer-instagram > h5{
-    margin-bottom: 40px;
+    margin-bottom: 32px;
+}
+
+.footer-instagram a {
+    color: #999999;
 }
 
 .instagram-holder {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 11px;
+    width: 270px;
 }
 
 .instagram-holder img {
